<resources>
    <string name="app_name">CloneWhatsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">CloneWhatsapp</string>
    <string name="new_group">New group</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="linked_devices">Linked devices</string>
    <string name="starred_messages">Starred messages</string>
    <string name="payments">Payments</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
</resources>