<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/newGroup"
        android:title="@string/new_group" />
    <item
        android:id="@+id/newBroadcast"
        android:title="@string/new_broadcast" />
    <item
        android:id="@+id/linkedDevices"
        android:title="@string/linked_devices" />
    <item
        android:id="@+id/starredMessage"
        android:title="@string/starred_messages" />
    <item
        android:id="@+id/payments"
        android:title="@string/payments" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/app_bar_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        android:iconTint="@color/white"
        app:actionViewClass="android.widget.SearchView" />
</menu>